--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,15 @@
 {
   "name": "TactixStation",
   "short_name": "Tactix",
-  "start_url": "/index.html",
+  "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#0e0e10",
-  "theme_color": "#00bfff",
-  "description": "Futuristic radio and satellite tracking app with offline Pro Mode",
+  "theme_color": "#000000",
+  "background_color": "#000000",
   "icons": [
     {
-      "src": "icons/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "src": "icon.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ]
 }
